--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
 		"build": "svelte-kit build",
 		"preview": "svelte-kit preview",
 		"lint": "prettier --ignore-path .gitignore --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
-		"format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. .",
-		"postbuild": "node --experimental-json-modules ./sitemap.js"
+		"format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. ."
+
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-static": "^1.0.0-next.21",
