--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
 	"name": "sveltekit",
 	"version": "0.0.1",
-	"url": "http://mywebsite.com",
+	"url": "https://sveltekit-2c9.pages.dev",
 	"scripts": {
 		"dev": "svelte-kit dev",
 		"build": "svelte-kit build",
 		"preview": "svelte-kit preview",
 		"lint": "prettier --ignore-path .gitignore --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
-		"format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. ."
+		"format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. .",
+		"postbuild": "node --experimental-json-modules ./sitemap.js"
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-static": "^1.0.0-next.21",
