--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
 	"version": "0.0.1",
 	"url": "https://sveltekit-2c9.pages.dev",
 	"scripts": {
-		"dev": "node ./generateImages.js & svelte-kit dev",
-		"build": "node ./generateImages.js & svelte-kit build",
+		"dev": "node ./prebuild.js & svelte-kit dev",
+		"build": "node ./prebuild.js & svelte-kit build",
 		"preview": "svelte-kit preview",
 		"lint": "prettier --ignore-path .gitignore --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
 		"format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. .",
@@ -23,7 +23,8 @@
 		"sharp": "^0.28.2",
 		"svelte": "^3.42.6",
 		"svelte-preprocess": "^4.9.8",
-		"vite-imagetools": "^3.8.0"
+		"vite-imagetools": "^3.8.0",
+		"vite-plugin-commonjs-externals": "^0.1.1"
 	},
 	"type": "module"
 }
