--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
 		"preview": "svelte-kit preview",
 		"lint": "prettier --ignore-path .gitignore --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
 		"format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. .",
-		"postbuild": "node --experimental-json-modules ./sitemap.js"
+		"postbuild": "node --experimental-json-modules ./sitemap.js",
+		"cfp": "npx wrangler pages dev -- npm run dev"
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-cloudflare": "^1.0.0-next.2",
@@ -28,5 +29,8 @@
 		"vite-imagetools": "^3.8.0",
 		"vite-plugin-commonjs-externals": "^0.1.1"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"wrangler": "^0.0.0-beta.6"
+	}
 }
